# attendance

./: .gitignore  Cargo.toml  Procfile  README.md  index.html  package-lock.json
.github/workflows/: codeql.yml
src/: add_student.rs  forms.rs  handlers.rs  lib.rs  login.rs  main.rs  schema.rs  slack.rs  stats.rs
src/schema/: student.rs
src/slack/: bot.rs
static/: package-lock.json  package.json
static/src/: App.js  index.css  navBar.js  routes.js
static/src/components/: AddStudent.js  Admin.js  Correction.js  Current.js  Login.js  Main.js  Stats.js
tools/: Cargo.toml
tools/src/: main.rs
